<resources>
    <string name="app_name">KnowSharing</string>
    <string name="bottom_menu_index">首页</string>
    <string name="bottom_menu_community">社区</string>
    <string name="bottom_menu_notification">消息</string>
    <string name="bottom_menu_friends">发现</string>
    <string name="friends_tab_chat">会话</string>
    <string name="friends_tab_linkman">联系人</string>
    <string name="bottom_menu_me">我的</string>
    <string name="setting">设置</string>
    <string name="nav_call">电话</string>
    <string name="nav_friends">朋友</string>
    <string name="nav_location">地址</string>
    <string name="nav_mail">邮件</string>
    <string name="nav_task">记录</string>
    <string name="nav_index">点击编辑或修改个人主页</string>


    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="tab_menu_alert">提醒</string>
    <string name="tab_menu_profile">信息</string>
    <string name="tab_menu_pay">我的</string>
    <string name="tab_menu_setting">设置</string>

    <string name="app_contract">用户协议</string>
    <string name="app_contract1">已阅读并同意   </string>
    <string name="username">请输入用户名</string>
    <string name="userpass">请输入密码</string>
    <string name="user_repass">再次输入密码</string>
    <string name="app_get_verification_cade">获取验证码</string>
    <string name="app_verification_code">请输入验证码</string>
    <string name="app_remember_password">记住密码</string>
    <string name="app_forget_password">忘记密码</string>
    <string name="app_registered">注册</string>
    <string name="app_login">登录</string>
    <string name="text_now_login">正在登录</string>
    <string name="app_registered_login">已有用户？点击登录</string>


    <!--编辑个人资料界面-->
    <string name="head_portrait">头像</string>
    <string name="nickname">昵称</string>
    <string name="introduction">个人简介</string>
    <string name="unset">未设置</string>

    <string name="my_message">我的信息</string>
    <string name="my_friends">我的好友</string>
    <string name="my_document">我的文件</string>
    <string name="my_question">我的问答</string>
    <string name="my_invite">邀请好友</string>
    <string name="my_edit">编辑资料</string>

    <string name="user_name">用户名:</string>
    <string name="user_sex">性别:</string>
    <string name="user_school">学校:</string>


    <string name="community_item_title">标题</string>
    <string name="community_item_author">作者</string>
    <string name="community_item_introduction">简介</string>
    <string name="community_item_uploadtime">上传时间</string>


    <string name="chat__button_send">发送</string>


    <string name="toolbar_square">广场</string>
    <string name="toolbar_create_chat">创建群聊</string>
    <string name="toolbar_sweep">扫一扫</string>
    <string name="toolbar_find_friends">查找用户</string>
    <string name="quit">退出</string>

    <string name="fragment_user_guanzhu">关注</string>
    <string name="fragment_user_fensi">粉丝</string>
    <string name="fragment_user_shoucang">收藏</string>
    <string name="fragment_user_lishi">历史</string>

    <!--底部菜单栏中间扩展-->
    <string name="compose_mood">心情</string>
    <string name="compose_video">视频</string>
    <string name="compose_headlines">文章</string>
    <string name="compose_square">广场</string>
    <string name="compose_lbs">签到</string>
    <string name="compose_more">更多</string>

    <!--写心情界面-->
    <string name="share_mood">分享我的心情</string>
    <string name="public_privacy">公开/私密</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="longclick_speak">长按说话</string>
    <string name="picture">照片</string>
    <string name="camera">拍摄</string>
    <string name="location">位置</string>
    <string name="voice_up_tips">手指上滑,取消发送</string>
    <string name="voice_cancel_tips">松开手指，取消发送</string>
    <string name="voice_seconds_tips">还可以说%1$s秒</string>
    <string name="voice_short_tips">录音时间太短</string>
    <string name="agree">接受</string>

    <string name="add_friend">关注</string>
    <string name="chat">发消息</string>
    <string name="add_avator">头像</string>
    <string name="add_name">账号</string>
    <string name="new_friend">新朋友</string>

</resources>
