<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tap_cancle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_centerVertical="true"
        android:clickable="true"
        android:padding="10dp"
        android:text="返回"
        android:textColor="@color/cancel_text"
        android:textSize="16sp" />

    <RelativeLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/underline"
        android:orientation="horizontal"
        android:padding="10dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_alignParentStart="true"
            android:gravity="center_vertical"
            android:text="@string/head_portrait"
            android:textSize="20dp" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profile_image"
            android:layout_width="96dp"
            android:layout_height="96dp"
            android:src="@drawable/add_pic"
            android:layout_alignParentEnd="true"
            app:civ_border_color="@color/colorPrimary"
            app:civ_border_width="2dp" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/nickname"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/underline"
        android:orientation="horizontal"
        android:padding="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nickname"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/nickname_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:hint="@string/unset"
            android:textSize="20sp" />

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/introduction"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/underline"
        android:orientation="horizontal"
        android:padding="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/introduction"
            android:textSize="20sp" />

    </LinearLayout>


</LinearLayout>