<?xml version="1.0" encoding="utf-8"?>
<!--首页内容展示示例-->
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal">


    <!--<LinearLayout
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <View
            android:layout_width="2dp"
            android:layout_height="41dp"
            android:background="@color/colorPrimary"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/timeline_green"/>

        <View
            android:layout_width="2dp"
            android:layout_height="41dp"
            android:background="@color/colorPrimary"/>

    </LinearLayout>-->

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginRight="10dp"
        android:layout_weight="1"
        android:background="@drawable/timeline_content"
        android:orientation="horizontal"
        android:padding="10dp">

        <LinearLayout
            android:layout_width="230dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_gravity="left">

            <TextView
                android:id="@+id/index_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:text="@string/community_item_title"
                android:textColor="@color/colorPrimary"
                android:textSize="18sp"/>

            <TextView
                android:id="@+id/index_introdiction"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:paddingLeft="10dp"
                android:text="@string/community_item_introduction"
                android:textColor="@color/colorAccent"
                android:textSize="15sp"/>

            <TextView
                android:id="@+id/index_uploadtime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:text="@string/community_item_uploadtime"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_gravity="end">

            <TextView
                android:id="@+id/index_author"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/community_item_author"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="end|bottom">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/index_collect"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:src="@drawable/icon_collect"/>
                    <TextView
                        android:id="@+id/index_collect_numbers"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:text="30" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/index_like"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:src="@drawable/icon_work_like"/>
                    <TextView
                        android:id="@+id/index_like_numbers"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:text="30"/>

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>