<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:fitsSystemWindows="true"
    android:background="@color/white">



    <LinearLayout
        android:id="@+id/rg_tab_bar"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_gravity="bottom"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/home_bottombar_topdrive" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <RelativeLayout
                android:id="@+id/rb_index"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/home_bottombar_bg"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/rb_index_text"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:drawablePadding="-5dp"
                    android:drawableTop="@drawable/tabbar_home_auto"
                    android:gravity="center"
                    android:text="@string/bottom_menu_index"
                    android:textColor="@color/home_bottombar_font"
                    android:textSize="10sp" />

                <ImageView
                    android:layout_width="10dp"
                    android:layout_height="10dp"
                    android:layout_alignEnd="@+id/rb_index_text"
                    android:layout_alignRight="@+id/rb_index_text"
                    android:layout_alignTop="@+id/rb_index_text"
                    android:src="@drawable/new_dot"
                    android:visibility="gone" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rb_community"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/home_bottombar_bg"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/rb_community_text"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_centerInParent="true"
                    android:drawablePadding="-5dp"
                    android:drawableTop="@drawable/tabbar_message_auto"
                    android:gravity="center"
                    android:text="@string/bottom_menu_community"
                    android:textColor="@color/home_bottombar_font"
                    android:textSize="10sp" />

                <ImageView
                    android:layout_width="10dp"
                    android:layout_height="10dp"
                    android:layout_alignEnd="@+id/rb_community_text"
                    android:layout_alignRight="@+id/rb_community_text"
                    android:layout_alignTop="@+id/rb_community_text"
                    android:src="@drawable/new_dot"
                    android:visibility="gone" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/home_bottombar_bg"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/fl_post"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_centerInParent="true"
                    android:layout_gravity="center"
                    android:layout_marginBottom="2dp"
                    android:layout_marginLeft="13dp"
                    android:layout_marginRight="13dp"
                    android:layout_marginTop="2dp"
                    android:background="@drawable/rect_orgin_auto"
                    android:scaleType="center"
                    android:src="@drawable/tabbar_compose_icon_add" />

            </RelativeLayout>


            <RelativeLayout
                android:id="@+id/rb_friends"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/home_bottombar_bg"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/rb_friends_text"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:drawablePadding="-5dp"
                    android:drawableTop="@drawable/tabbar_discover_auto"
                    android:gravity="center"
                    android:text="@string/bottom_menu_friends"
                    android:textColor="@color/home_bottombar_font"
                    android:textSize="10sp" />

                <ImageView
                    android:id="@+id/iv_contact_tips"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginRight="30dp"
                    android:layout_marginTop="7dp"
                    android:background="@mipmap/msg_tips"
                    android:contentDescription="@string/action_settings"
                    android:gravity="center"
                    android:textColor="@android:color/holo_red_dark"
                    android:textSize="12sp"
                    android:visibility="visible"/>
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rb_user"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/home_bottombar_bg"
                android:orientation="horizontal">


                <TextView
                    android:id="@+id/rb_user_text"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_centerInParent="true"
                    android:drawablePadding="-5dp"
                    android:drawableTop="@drawable/tabbar_profile_auto"
                    android:gravity="center"
                    android:text="@string/bottom_menu_me"
                    android:textColor="@color/home_bottombar_font"
                    android:textSize="10sp" />


                <ImageView
                    android:layout_width="10dp"
                    android:layout_height="10dp"
                    android:layout_alignEnd="@+id/rb_user_text"
                    android:layout_alignRight="@+id/rb_user_text"
                    android:layout_alignTop="@+id/rb_user_text"
                    android:src="@drawable/new_dot"
                    android:visibility="gone" />
            </RelativeLayout>
        </LinearLayout>

    </LinearLayout>



    <!--<RadioGroup
        android:id="@+id/rg_tab_bar"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_alignParentBottom="true"
        android:background="@color/bg_white"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/rb_index"
            style="@style/bottom_menu_item"
            android:drawableTop="@drawable/bottom_menu_index"
            android:text="@string/bottom_menu_index" />

        <RadioButton
            android:id="@+id/rb_community"
            style="@style/bottom_menu_item"
            android:drawableTop="@drawable/bottom_menu_community"
            android:text="@string/bottom_menu_community" />

        <RadioButton
            android:id="@+id/rb_friends"
            style="@style/bottom_menu_item"
            android:drawableTop="@drawable/bottom_menu_notifition"
            android:text="@string/bottom_menu_friends" />

        <RadioButton
            android:id="@+id/rb_user"
            style="@style/bottom_menu_item"
            android:drawableTop="@drawable/bottom_menu_user"
            android:text="@string/bottom_menu_me"/>

    </RadioGroup>-->

</FrameLayout>